<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="model"
        type="com.pakt_games.weatherapp.ui.model.CityHours" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_margin"
    android:layout_margin="@dimen/medium_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/weather_forecast_detail_reycler_item_image_lenght"
        android:layout_height="@dimen/weather_forecast_detail_reycler_item_image_lenght"
        android:downloadImage="@{model.condition.icon}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewWeatherForecastDetailCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_forecast_detail_recycler_item_celcius"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textViewWeatherForecastDetailCelsiusNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewWeatherForecastDetailCelsiusNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textViewWeatherForecastDetailFahrenayt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWeatherForecastDetailCelsius"
        tools:text="@string/weather_forecast_detail_recycler_temperature_number"
        android:text="@{String.valueOf(model.temp_c)}"/>

    <TextView
        android:id="@+id/textViewWeatherForecastDetailFahrenayt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_forecast_detail_recycler_item_fahrenayt"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textViewWeatherForecastDetailFahrenaytNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWeatherForecastDetailCelsiusNumber" />

    <TextView
        android:id="@+id/textViewWeatherForecastDetailFahrenaytNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWeatherForecastDetailFahrenayt"
        tools:text="@string/weather_forecast_detail_recycler_temperature_number"
        android:text="@{String.valueOf(model.temp_f)}"/>

    <TextView
        android:id="@+id/textViewWeatherForecastDetailAirStatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/weather_forecast_detail_recycler_air_statu"
        android:text="@{model.condition.text}"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWeatherForecastDetailDayTime"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewWeatherForecastDetailDayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textViewWeatherForecastDetailAirStatu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="@string/test_text_date_day_time"
        android:text="@{model.time}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>